--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "standard",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://jKiler.github.io/bike-sharing-cities"
+  "homepage": "https://jKiler.github.io/bike-sharing-cities",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "standard": "^11.0.1"
+  }
 }
